<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">ZegoLiveAudio</string>
  <string name="login_page_title">ZEGOCLOUD\nLive Audio Room</string>
  <string name="login_page_user_id">User ID</string>
  <string name="login_page_user_name">User name</string>
  <string name="login_page_login">Log In</string>
  <string name="toast_userid_login_fail">Please enter your user ID.</string>
  <string name="toast_user_id_error">User ID can only contain letters and numbers.</string>
  <string name="toast_login_fail">Failed to log in. Error code: %d.</string>
  <string name="toast_kickout_error">This account has already logged in from another device.</string>

  <string name="create_page_room_id">Room ID</string>
  <string name="create_page_room_name">Room name</string>
  <string name="create_page_or">OR</string>
  <string name="create_page_create_room">Create room</string>
  <string name="create_page_join_room">Join room</string>
  <string name="create_page_cancel">Cancel</string>
  <string name="create_page_create">Create</string>

  <string name="toast_room_id_enter_error">Please enter the room ID.</string>
  <string name="toast_room_not_exist_fail">This room does not exist. Please check the room ID or create a new one.</string>
  <string name="toast_room_name_error">Please enter the room name.</string>
  <string name="toast_create_room_success">Room created successfully. Join the room now.</string>
  <string name="toast_join_room_fail">Failed to join the room. Error code: %d.</string>
  <string name="toast_create_room_fail">Failed to create a room. Error code: %d.</string>

  <string name="setting_page_settings">Settings</string>
  <string name="setting_page_sdk_version">Express SDK Version</string>
  <string name="setting_page_zim_sdk_version">ZIM SDK Version</string>
  <string name="setting_page_version">APP Version</string>
  <string name="setting_page_upload_log">Upload logs</string>
  <string name="setting_page_terms_of_service">Terms of service</string>
  <string name="setting_page_privacy_policy">Privacy Policy</string>
  <string name="setting_page_logout">Log out</string>
  <string name="toast_upload_log_success">Logs uploaded successfully.</string>
  <string name="toast_upload_log_fail">Failed to upload logs. Error code: %d.</string>
  <string name="toast_logout_fail">Failed to log out. Error code: %s.</string>

  <string name="room_page_host">Host</string>
  <string name="toast_disconnect_tips">You are disconnected from the room. Please join again.</string>
  <string name="room_page_mic_cant_open">The Mic is off.</string>

  <string name="room_page_grant_mic_permission">Please allow access to your microphone to continue.</string>
  <string name="room_page_go_to_settings">Go to Settings</string>
  <string name="room_page_cancel">Cancel</string>
  <string name="room_page_user_list">Participants (%d)</string>
  <string name="room_page_invite_take_seat">Invite to speak</string>
  <string name="room_page_role_speaker">Speaker</string>
  <string name="room_page_role_owner">Owner</string>
  <string name="room_page_settings">Settings</string>
  <string name="room_page_leave_speaker_seat">Leave seat</string>
  <string name="room_page_set_take_seat">Close all untaken speaker seats</string>
  <string name="room_page_set_silence">Disable text chat for all</string>
  <string name="room_page_has_left_the_room">%s left the room</string>
  <string name="room_page_joined_the_room">%s joined the room</string>
  <string name="toast_send_message_error">Failed to send message. Error code: %d.</string>
  <string name="room_page_send_message">Send</string>

  <string name="toast_disable_text_chat_success">Disabled text chat successfully.</string>
  <string name="toast_allow_text_chat_success">Allow text chat successfully.</string>
  <string name="toast_disable_text_chat_tips">The host has disabled text chat for everyone.</string>
  <string name="toast_allow_text_chat_tips">The host has allowed text chat for everyone.</string>

  <string name="room_page_gift">Gifts</string>

  <string name="room_page_select_all_speakers">All speakers</string>
  <string name="room_page_gift_no_speaker">No other speakers</string>
  <string name="room_page_select_default">Choose a speaker</string>
  <string name="room_page_send_gift">Send</string>
  <string name="toast_send_gift_error">Failed to send gift. Error code: %d.</string>
  <string name="room_page_received_gift_tips">%s received HEART from %s</string>
  <string name="room_page_gift_heart">HEART</string>
  <string name="room_page_lock_seat">Close seat</string>
  <string name="room_page_unlock_seat">Open seat</string>
  <string name="mic_request">We need to use your mic to help you join the voice interaction.</string>
  <string name="toast_unlock_seat_fail">Failed to open the seat. Error code: %d.</string>
  <string name="toast_lock_seat_fail">Failed to close the seat. Error code: %d.</string>
  <string name="toast_lock_seat_already_take_seat">Failed to close the seat. A speaker has already take the seat.</string>
  <string name="dialog_warning_leave_seat_message">Remove %s from the speaker seat?</string>
  <string name="dialog_tips_title">Tips</string>
  <string name="dialog_confirm">OK</string>
  <string name="dialog_cancel">Cancel</string>
  <string name="toast_kickout_leave_seat_error">Failed to remove %s from the speaker seat. Error code: %d.</string>
  <string name="room_page_invitation_has_sent">Invitation sent.</string>
  <string name="room_page_no_more_seat_available">No speaker seats available at the moment. Please try again later.</string>
  <string name="dialog_invition_title">Invitation</string>
  <string name="dialog_invition_descrip">The host has invited you to speak.</string>
  <string name="dialog_refuse">Decline</string>
  <string name="dialog_accept">Accept</string>
  <string name="toast_to_be_a_speaker_seat_fail">Failed to connect. Error code: %d.</string>
  <string name="room_page_take_seat">Take the seat</string>
  <string name="toast_take_speaker_seat_fail">Failed to take the speaker seat. Error code: %d.</string>
  <string name="the_wheat_position_has_been_locked">This seat has been closed.</string>
  <string name="dialog_sure_to_leave_seat">Are you sure to leave the seat?</string>
  <string name="toast_leave_seat_fail">Failed to leave the speaker seat. Error code: %d.</string>
  <string name="room_page_destroy_room">End room</string>
  <string name="dialog_sure_to_destroy_room">End the room now?</string>
  <string name="toast_room_has_destroyed">This room has ended.</string>
  <string name="toast_room_leave_fail_tip">Failed to leave the room. Error code: %d.</string>
  <string name="toast_room_end_fail_tip">Failed to end the room. Error code: %d.</string>
  <string name="member_list_send_invitation_failed">Failed to send the invitation.</string>
  <string name="member_list_send_invitation_error">Failed to send the invitation. Error code: %s</string>
  <string name="network_connect_failed">Network connection failed. Please log out and join again.</string>
  <string name="network_connect_failed_title">Network Error</string>
  <string name="network_reconnect">Network error. Reconnecting...</string>
  <string name="toast_room_existed">Failed to create room, because the room already exists.</string>
</resources>