<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:paddingEnd="30dp"
        android:text="@string/setting_page_settings"
        android:textColor="#ff0055ff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_page_host"
        android:textColor="#000"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_settings" />

    <EditText
        android:id="@+id/et_room_id"
        style="@style/InputEditTextBackground"
        android:layout_marginTop="190dp"
        android:digits="01234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
        android:ems="10"
        android:hint="@string/create_page_room_id"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_join"
        style="@style/BlueBtnBackground"
        android:layout_marginTop="36dp"
        android:text="@string/create_page_join_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_room_id" />

    <TextView
        android:id="@+id/tv_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_page_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_join" />

    <Button
        android:id="@+id/btn_create"
        style="@style/GreyBtnBackground"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_divider" />

    <ImageView
        android:id="@+id/iv_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:src="@drawable/icon_add"
        app:layout_constraintBottom_toBottomOf="@id/btn_create"
        app:layout_constraintEnd_toStartOf="@id/tv_create"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_create" />

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_page_create_room"
        android:textAllCaps="false"
        android:textColor="#1B1B1B"
        app:layout_constraintBottom_toBottomOf="@id/btn_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_create"
        app:layout_constraintTop_toTopOf="@id/btn_create" />

</androidx.constraintlayout.widget.ConstraintLayout>