<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F5F6"
    tools:context=".feature.settings.SettingsActivity">

    <View
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingEnd="16dp"
        android:paddingBottom="11dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_page_settings"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_logout" />

    <LinearLayout
        android:id="@+id/layout_rtc_sdk_version"
        style="@style/SettingsItemLayoutStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_title">

        <TextView
            style="@style/SettingsItemTitleStyle"
            android:text="@string/setting_page_sdk_version" />

        <TextView
            android:id="@+id/tv_rtc_sdk_version"
            style="@style/SettingsItemContentStyle"
            tools:text="v1.0.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_zim_sdk_version"
        style="@style/SettingsItemLayoutStyle"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_rtc_sdk_version">

        <TextView
            style="@style/SettingsItemTitleStyle"
            android:text="@string/setting_page_zim_sdk_version" />

        <TextView
            android:id="@+id/tv_zim_sdk_version"
            style="@style/SettingsItemContentStyle"
            tools:text="v1.0.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_app_version"
        style="@style/SettingsItemLayoutStyle"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_zim_sdk_version">

        <TextView
            style="@style/SettingsItemTitleStyle"
            android:text="@string/setting_page_version" />

        <TextView
            android:id="@+id/tv_app_version"
            style="@style/SettingsItemContentStyle"
            tools:text="v1.0.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_terms_of_service"
        style="@style/SettingsItemLayoutStyle"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_app_version">

        <TextView
            style="@style/SettingsItemTitleStyle"
            android:text="@string/setting_page_terms_of_service" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_privacy_policy"
        style="@style/SettingsItemLayoutStyle"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_terms_of_service">

        <TextView
            style="@style/SettingsItemTitleStyle"
            android:text="@string/setting_page_privacy_policy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_share_log"
        style="@style/SettingsItemLayoutStyle"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_privacy_policy">

        <TextView
            style="@style/SettingsItemTitleStyle"
            android:text="@string/setting_page_upload_log" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_logout"
        style="@style/SettingsItemLayoutStyle"
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/setting_page_logout"
        android:textColor="#EE1515"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_share_log" />
</androidx.constraintlayout.widget.ConstraintLayout>