<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@drawable/white_fill_half_round_rectangle_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_set_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/setting_page_settings"
        android:textColor="#ff1b1b1b"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="18dp"
        android:paddingEnd="18dp">

        <TextView
            android:id="@+id/tv_tak_seat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/room_page_set_take_seat"
            android:textColor="#ff1b1b1b"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_allow_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SCBSwitch"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="18dp"
        android:paddingEnd="18dp">

        <TextView
            android:id="@+id/tv_allow_speak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/room_page_set_silence"
            android:textColor="#ff1b1b1b"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_allow_mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SCBSwitch"/>

    </LinearLayout>

</LinearLayout>